--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     /* height: 100px; */
     width: 100%;
     /* background-color: burlywood; */
-    position: fixed;
+    position: absolute;
     z-index: 99;
     display: flex;
     align-items: flex-start;
