--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ html, body {
 .cursor{
     height: 40px;
     position: absolute;
+    z-index: 999;
 }
 body {
     background-color: #F7F7F7;
@@ -33,8 +34,8 @@ body {
 #nav {
     /* height: 100px; */
     width: 100%;
-    /* background-color: burlywood; */
-    position: absolute;
+  
+    position: fixed;
     z-index: 99;
     display: flex;
     align-items: flex-start;
@@ -43,6 +44,8 @@ body {
 }
 
 #nav #nav-part2 {
+    background-color: rgb(243, 242, 242);
+    border-radius: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -116,13 +119,13 @@ body {
 #video-container {
     height: 100vh;
     width: 100%;
-
+    background-color: grey;
     margin-top: 1vw;
     position: relative;
 }
 
 #video-container img {
-    z-index: -1;
+    z-index: 1;
     position: relative;
     width: 100%;
     height: 100vh;
@@ -145,6 +148,7 @@ body {
     border-radius: 50%;
     opacity: 0;
     scale: 0;
+    z-index:10;
 
 }
 
